Styling and naming fixes

--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -30,8 +30,8 @@ $card-grid-padding: 1.5rem;
 $hero-height: 30rem;
 $prediction-height: 15rem;
 $prediction-padding: 0.75rem;
-$pundit-vertical-padding: 1rem;
-$pundit-height: 4rem;
+$user-vertical-padding: 1rem;
+$user-height: 4rem;
 $voting-height: 2rem;
 $hero-image-width: 100rem;
 $tall-2-height: (2 * $prediction-height + $card-grid-padding);
