--- a/app/styles/elements/_list-card.scss
+++ b/app/styles/elements/_list-card.scss
@@ -7,7 +7,7 @@
 
   & > .title-wrapper {
     position: relative;
-    height: ($tall-3-2-height - 4 * $pundit-height);
+    height: ($tall-3-2-height - 4 * $user-height);
     padding: 1rem;
 
     @include border-box;
