--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,3 +18,4 @@
 @import 'elements/list-card';
 @import 'elements/featured-blog-posts';
 @import 'elements/prediction-set-card';
+@import 'elements/facebook-card';
