--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,3 +19,4 @@
 @import 'elements/featured-blog-posts';
 @import 'elements/prediction-set-card';
 @import 'elements/facebook-card';
+@import 'elements/march-madness-card';
