--- a/app/styles/elements/_button.scss
+++ b/app/styles/elements/_button.scss
@@ -1,15 +1,5 @@
 .button, .btn {
 
-  display: inline-block;
-  width: auto;
-  padding: 0.5rem 1rem;
-  border: 0;
-
-  background-color: $blue;
-  color: $white;
-
-  &:hover {
-      color: $ultra-light-grey;
-  }
+  @include button($blue, $white, $ultra-light-grey, 1px solid $blue);
 
 }
