finish prediction submission page

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -15,18 +15,27 @@ body {
 }
 
 .content {
+  @extend %clearfix;
   z-index: 80;
   position: absolute;
   width: 100%;
   overflow-x: hidden;
 
-  & >.card-grid {
+  & > .card-grid {
     width: 95%;
   }
 
   &.no-hero {
-    margin-top: ($header-height + 2rem);
+    padding-top: ($header-height + 2rem);
   }
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 65rem;
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
 }
 
 .full-width-outer {
@@ -136,4 +145,19 @@ input, textarea {
       padding-left: 2.25rem;
     }
   }
+}
+
+input:disabled {
+  background-color: gray;
+}
+
+select {
+  border: 1px solid $very-light-grey;
+  background-color: white;
+  border-radius: 0;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0px;
+  padding: 0.5rem 2rem 0.5rem 1rem;
+  background: url(../images/caret.svg) no-repeat right 0.25rem center;
+  background-size: 1rem 1rem;
 }
