--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,7 +9,10 @@
 @import 'elements/header';
 @import 'elements/hero';
 @import 'elements/footer';
+@import 'elements/sidebar';
 @import 'elements/card-grid';
+@import 'elements/prediction-form';
+@import 'elements/tag-input';
 @import 'elements/user';
 @import 'elements/prediction-card';
 @import 'elements/faceoff-card';
