--- a/app/styles/elements/_header.scss
+++ b/app/styles/elements/_header.scss
@@ -13,7 +13,6 @@ header {
     margin: 0 auto;
     width: 95%;
     padding: 0 0.75rem;
-    @include border-box;
 
     .logo {
       @extend .h5;
@@ -68,6 +67,7 @@ header {
         line-height: 1.2rem;
         vertical-align: middle;
         @include transition(0.2s);
+        cursor: text;
       }
 
       .stretch:focus i {
