--- a/app/styles/elements/_march-madness-card.scss
+++ b/app/styles/elements/_march-madness-card.scss
@@ -23,7 +23,7 @@
     top:0;
     left:0;
     height: 100%;
-    background-image: url(../../img/basket.jpg);
+    background-image: url(../images/basket.jpg);
 
     .scrim {
       background-color: rgba(0,0,0, 0.3);
