--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,6 @@
 @import 'vars';
 @import 'utils';
+@import 'animations';
 @import 'typography';
 @import 'layout';
 @import 'vendor/font-awesome/font-awesome';
@@ -22,4 +23,5 @@
 @import 'elements/featured-blog-posts';
 @import 'elements/prediction-set-card';
 @import 'elements/facebook-card';
+@import 'elements/small-feature-card';
 @import 'elements/march-madness-card';
