--- a/app/styles/_utils.scss
+++ b/app/styles/_utils.scss
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+@mixin content-box {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+}
+
 @mixin border-radius($top, $right: $top, $bottom: $top, $left: $top) {
   -webkit-border-radius: $top $right $bottom $left;
   -moz-border-radius:    $top $right $bottom $left;
