move login into modal, more logic/data fixing to match API

--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -2,13 +2,14 @@
 $white: #ffffff;
 $black: #000000;
 
-$blue: #2a81c4;
+$blue: #08537b;
 $green: #039b67;
 $yellow: #f4bb15;
 $yellow-green: #FF5900;
 $red: #e54236;
 $orange: #d79003;
 $facebook-blue: #3b5998;
+$error-red: #bf616a;
 
 $ultra-light-grey: #f5f5f5;
 $very-light-grey: #e5e5e5;
