--- a/app/styles/elements/_header.scss
+++ b/app/styles/elements/_header.scss
@@ -50,7 +50,7 @@ header {
       }
     }
 
-    .sign-up, .search, {
+    .user-button, .search {
       float: right;
       font-size: 0.8rem;
       margin-top: 1rem;
