--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@
 
 @import 'elements/button';
 @import 'elements/header';
+@import 'elements/modal';
 @import 'elements/hero';
 @import 'elements/footer';
 @import 'elements/sidebar';
