--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -69,6 +69,10 @@ h6, .h6 {
   line-height: 1rem;
 }
 
+.error, .error-container {
+  color: $error-red;
+}
+
 @media screen and (min-width: $xxl-desktop-min) {
   html, body {
     font-size: 18px;
