--- a/app/styles/elements/_prediction-form.scss
+++ b/app/styles/elements/_prediction-form.scss
@@ -22,9 +22,17 @@
   }
 
   label {
-    display: block;
-    padding-left: 1rem;
-    margin-bottom: 0;
+    display: inline;
+    padding: 0 0.5rem;
+  }
+
+  input[type="radio"] {
+    height: 1rem;
+    width: 1rem;
+  }
+
+  input[type="date"] {
+    width: 12rem;
   }
 
   .spacer {
