--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,3 +26,5 @@
 @import 'elements/facebook-card';
 @import 'elements/small-feature-card';
 @import 'elements/march-madness-card';
+
+@import 'pages/profile';
