finish login modal and register page logic, finish login modal styling

--- a/app/styles/elements/_button.scss
+++ b/app/styles/elements/_button.scss
@@ -2,4 +2,8 @@
 
   @include button($blue, $white, $ultra-light-grey, 1px solid $blue);
 
+  &.fb, &.facebook {
+    @include button($facebook-blue, $white, $ultra-light-grey, 1px solid $facebook-blue);
+  }
+
 }
