--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -2,12 +2,12 @@
 .full-height { height: 100%; }
 .inherit-height { height: inherit; }
 
+.block { display: block; }
+.inline-block { display: inline-block; }
+
 .table { display: table; }
 .tr { display: table-row; }
-.td {
-  display: table-cell;
-  vertical-align: middle;
-}
+.td { display: table-cell; vertical-align: middle; }
 
 .text-right { text-align: right; }
 .text-left { text-align: left; }
