--- a/app/styles/elements/_modal.scss
+++ b/app/styles/elements/_modal.scss
@@ -14,12 +14,28 @@ div.modal-backdrop {
     z-index: 4;
     position: relative;
     margin: 150px auto 0 auto;
-    padding: $prediction-padding;
+    padding: $prediction-padding*2;
     width: 600px;
 
     color: $dark-grey;
     background-color: $white;
     @include custom-box-shadow(0px 2px 55px rgba(0, 0, 0, 0.3));
+
+    .close-button {
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      width: 20px;
+      height: 20px;
+      line-height: 20px;
+      font-size: 0.8rem;
+      text-align: center;
+
+      background-color: $grey;
+      color: $white;
+      cursor: pointer;
+      @include border-radius(100%);
+    }
   }
 
 }
