--- a/app/styles/elements/_login-modal.scss
+++ b/app/styles/elements/_login-modal.scss
@@ -6,10 +6,13 @@
     i { margin-right: 0.2rem; }
   }
 
+  input, .error-container {
+    margin-bottom: 1rem;
+  }
+
   input {
     width: 100%;
     height: 2.5rem;
-    margin-bottom: 1rem;
     border: 1px solid $very-light-grey;
   }
 
