--- a/app/styles/elements/_card-grid.scss
+++ b/app/styles/elements/_card-grid.scss
@@ -4,33 +4,8 @@
   margin: 0 auto;
   margin-bottom: $card-grid-padding;
 
-  & > div {
-    padding: 0 ($card-grid-padding / 2);
-
-    &:first-child {
-      // margin-left: (- $card-grid-padding);
-    }
-  }
-
-  .card-grid  {
-    z-index: 200;
-    width: 100%;
-
-    &:last-child {
-        margin: 0;
-    }
-
-    & > div {
-      padding: 0;
-      margin: 0;
-
-      &:not(:last-child) {
-        padding-right: ($card-grid-padding / 2);
-      }
-      &:not(:first-child) {
-        padding-left: ($card-grid-padding / 2);
-      }
-    }
+  & > * {
+    padding: 0 ($card-grid-padding / 2) $card-grid-padding;
   }
 
 }
