fix predict page styling and logic

--- a/app/styles/elements/_sidebar.scss
+++ b/app/styles/elements/_sidebar.scss
@@ -8,6 +8,12 @@
 
   &.left { left: 0; }
   &.right { right: 0; }
+  &.relative {
+    position: relative;
+
+    &.left { float: left; }
+    &.right { float: right; }
+  }
 }
 
 .content-with-sidebar {
