--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,7 +15,6 @@
 @import 'elements/footer';
 @import 'elements/sidebar';
 @import 'elements/card-grid';
-@import 'elements/prediction-form';
 @import 'elements/tag-input';
 @import 'elements/user';
 @import 'elements/prediction-card';
@@ -31,3 +30,4 @@
 
 @import 'pages/register';
 @import 'pages/profile';
+@import 'pages/predict';
