--- a/app/styles/elements/tag-input.scss
+++ b/app/styles/elements/tag-input.scss
@@ -1,13 +1,24 @@
 div.tokenfield {
 
-  height: 2.5rem;
+  display: block;
+  width: 100%;
+  height: auto;
+  min-height: 2.5rem;
+  padding: 0 0.5rem;
+  vertical-align: middle;
 
   background-color: $white;
 
   .token-input {
+    position: relative;
+    display: inline-block;
     width: 60px;
     min-width: 60px;
+    height: 24px;
+    padding: 0;
+    top: 10px;
     border: 0;
+    outline: none;
   }
 
   .token {
@@ -30,10 +41,6 @@ div.tokenfield {
       padding-right: 5px;
 
       color: $white;
-    }
-
-    &:first-of-type {
-      margin-left: 10px;
     }
   }
 
