add datepicker plugin for predict page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,7 @@
 @import 'elements/sidebar';
 @import 'elements/card-grid';
 @import 'elements/tag-input';
+@import 'elements/datepicker';
 @import 'elements/user';
 @import 'elements/prediction-card';
 @import 'elements/faceoff-card';
