add space title image to list cards, remove second 'Featured Users' from home page

--- a/app/styles/elements/_list-card.scss
+++ b/app/styles/elements/_list-card.scss
@@ -11,6 +11,7 @@
     padding: 1rem;
 
     @include background-cover();
+    background-image: url(../images/space_bg.jpg);
 
     & > .title {
       position: absolute;
