--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@
 @import 'elements/footer';
 @import 'elements/sidebar';
 @import 'elements/card-grid';
+@import 'elements/full-page-form';
 @import 'elements/tag-input';
 @import 'elements/datepicker';
 @import 'elements/user';
@@ -27,8 +28,8 @@
 @import 'elements/prediction-set-card';
 @import 'elements/facebook-card';
 @import 'elements/small-feature-card';
+@import 'elements/account-preview-card';
 @import 'elements/march-madness-card';
 
-@import 'pages/register';
 @import 'pages/profile';
 @import 'pages/predict';
