--- a/app/styles/elements/_prediction-card.scss
+++ b/app/styles/elements/_prediction-card.scss
@@ -62,6 +62,10 @@
           color: $white;
           border-color: $blue;
           z-index: 550;
+          a {
+            color: $white;
+            &:hover { text-decoration: none; }
+          }
         }
       }
     }
