--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -27,34 +27,34 @@ a, a:hover {
   text-decoration: none;
 }
 
-h1, .h1 {
+h1 {
   font-family: $serif;
   font-size: 2.75rem;
   line-height: 3.5rem;
 }
 
-h2, .h2 {
+h2 {
   font-family: $serif;
   font-weight: $regular;
   font-size: 2.25rem;
   line-height: 3rem;
 }
 
-h3, .h3 {
+h3 {
   font-family: $serif;
   font-weight: $regular;
   font-size: 1.75rem;
   line-height: 2.25rem;
 }
 
-h4, .h4 {
+h4 {
   font-family: $serif;
   font-weight: $regular;
   font-size: 1.25rem;
   line-height: 2rem;
 }
 
-h5, .h5 {
+h5 {
   font-family: $sans;
   font-weight: $bold;
   font-size: 1rem;
@@ -62,7 +62,7 @@ h5, .h5 {
   margin-bottom: 0.625rem;
 }
 
-h6, .h6 {
+h6 {
   font-family: $sans;
   font-weight: $regular;
   font-size: 0.8rem;
