--- a/app/styles/_animations.scss
+++ b/app/styles/_animations.scss
@@ -1,8 +1,14 @@
-@mixin animated($duration) {
+@mixin animatedWithDelay($duration, $delay) {
   -webkit-animation-duration: $duration;
   animation-duration: $duration;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+  -webkit-animation-delay: $delay;
+  animation-delay: $delay;
+}
+
+@mixin animated($duration) {
+  @include animatedWithDelay($duration, 0s);
 }
 
 @-webkit-keyframes fade-in-up {
@@ -27,9 +33,32 @@
   }
 }
 
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .fade-in-up {
   -webkit-animation-name: fade-in-up;
   animation-name: fade-in-up;
+}
+
+.fade-in {
+  -webkit-animation-name: fade-in;
+  animation-name: fade-in;
 }
 
 .animated {
