--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'vendor/font-awesome/font-awesome';
 @import 'base';
 
+// Element styles
 @import 'elements/button';
 @import 'elements/line-thru';
 @import 'elements/header';
@@ -31,5 +32,9 @@
 @import 'elements/account-preview-card';
 @import 'elements/march-madness-card';
 
+// Page styles
 @import 'pages/profile';
 @import 'pages/predict';
+
+// Event-specific styles
+@import 'oscars';
