fix pure CSS loading

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -1,3 +1,5 @@
+@import url('//yui.yahooapis.com/combo?pure/0.5.0/base-min.css&pure/0.5.0/grids-min.css&pure/0.5.0/forms-min.css');
+
 body, html {
   background-color: $very-light-grey;
   position: relative;
