refactor feature cards to be more generic. Rearrange hero as discussed

--- a/app/styles/_oscars.scss
+++ b/app/styles/_oscars.scss
@@ -195,7 +195,7 @@ $oscar-gold-bright: rgba(215, 200, 109, 1);
     @extend .background-image;
     background-position: top center;
     background-repeat: no-repeat;
-    background-image: url('../images/oscars_submit.jpg');
+    background-image: url('../images/oscars_trophies.jpg');
     position: relative;
     height: 100%;
     width: 100%;
