--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -28,7 +28,7 @@
 @import 'elements/recent-blog-posts';
 @import 'elements/prediction-set-card';
 @import 'elements/facebook-card';
-@import 'elements/small-feature-card';
+@import 'elements/feature-card';
 @import 'elements/account-preview-card';
 @import 'elements/march-madness-card';
 
