small styling fixes

--- a/app/styles/elements/tag-input.scss
+++ b/app/styles/elements/tag-input.scss
@@ -2,7 +2,7 @@ div.tokenfield {
 
   display: block;
   width: 100%;
-  height: auto;
+  height: 45px;
   min-height: 2.5rem;
   padding: 0 0.5rem;
   vertical-align: middle;
