fix styling per recommendations, add user dropdown to replace header user menu

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'elements/button';
 @import 'elements/line-thru';
 @import 'elements/header';
+@import 'elements/user-dropdown';
 @import 'elements/modal';
 @import 'elements/login-modal';
 @import 'elements/hero';
