add vars for purples from logo, replace blue with purple in most uses

--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -2,6 +2,8 @@
 $white: #ffffff;
 $black: #000000;
 
+$purple: #5c3666;
+$light-purple: #988ba0;
 $blue: #08537b;
 $green: #039b67;
 $yellow: #f4bb15;
