--- a/app/styles/elements/_footer.scss
+++ b/app/styles/elements/_footer.scss
@@ -3,7 +3,7 @@ footer {
   padding: 2rem 0 4rem;
   margin-top: 2rem;
 
-  background-color: $blue;
+  background-color: $purple;
   color: $white;
 
   & > .card-grid {
