--- a/app/styles/elements/tag-input.scss
+++ b/app/styles/elements/tag-input.scss
@@ -29,7 +29,7 @@ div.tokenfield {
     vertical-align: top;
     cursor: default;
 
-    background: $blue;
+    background: $purple;
     color: $white;
 
     span.token-label {
