more styling fixes

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -148,8 +148,8 @@ input, textarea {
 }
 
 input:disabled, .btn:disabled, .button:disabled {
-  background-color: $ultra-light-grey;
-  border-color: $ultra-light-grey;
+  background-color: $light-grey;
+  border-color: $light-grey;
 }
 
 select {
