replace AccountPreviewCard with ProfileCard, use on Register, Settings, and Profile pages

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,7 +30,7 @@
 @import 'elements/prediction-set-card';
 @import 'elements/facebook-card';
 @import 'elements/feature-card';
-@import 'elements/account-preview-card';
+@import 'elements/profile-card';
 @import 'elements/march-madness-card';
 
 // Page styles
