--- a/app/styles/elements/_footer.scss
+++ b/app/styles/elements/_footer.scss
@@ -1,10 +1,15 @@
 footer {
 
-  padding: 2rem 0 4rem;
+  padding: $full-space 0;
   margin-top: 2rem;
 
-  background-color: $purple;
-  color: $white;
+  background-color: darken($very-light-grey, 10);
+  color: $grey;
+
+  a {
+    color: $white;
+    &:hover { text-decoration: underline; }
+  }
 
   & > .card-grid {
     max-width: 95%;
@@ -12,19 +17,23 @@ footer {
     margin: 0 auto;
   }
 
+  .logo-image {
+    position: relative;
+    display: inline-block;
+    height: $header-height*0.75;
+    top: 0.5rem;
+    vertical-align: top;
+  }
+
   ul {
     padding: 0;
     margin: 0;
     list-style: none;
-    ul {
-      margin-left: 1rem;
-    }
-  }
 
-  .double {
-    border-bottom: 1px solid $white;
-    margin-bottom: 0.5rem;
-    width: 50%;
+    li {
+      font-size: 0.9rem;
+      line-height: 1.4rem;
+    }
   }
 
 }
